syntax = "proto3";

package pt.ulisboa.tecnico.distsys.ttt;

option java_multiple_files = true;

message CurrentBoardRequest {
  // No arguments for this request
}

message CurrentBoardResponse {
  string board = 1;
}

message PlayRequest {
  uint32 row = 1;
  uint32 column = 2;
  uint32 player = 3;
}

message PlayResponse {
  enum PlayResult {
    UNKNOWN = 0;
    OUT_OF_BOUNDS = 1;
    SQUARE_TAKEN = 2;
    WRONG_TURN = 3;
    GAME_FINISHED = 4;
    SUCCESS = 5;
  };
  PlayResult result = 1;
}

message CheckWinnerRequest {
  // No arguments for this request
}

message CheckWinnerResponse {
  sint32 result = 1;
}

service TTT {
  rpc CurrentBoard(CurrentBoardRequest) returns (CurrentBoardResponse);
  rpc Play(PlayRequest) returns (PlayResponse);
  rpc CheckWinner(CheckWinnerRequest) returns (CheckWinnerResponse);
}
